# mcpkg

./: .gitignore  .mcp.json  404.html  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  index.html  main.py  mise.toml  mkdocs.yml  pyproject.toml  pytest.ini  sitemap.xml
.github/workflows/: ci.yml  page.yml
.specify/memory/: constitution.md
docs/: index.md
mcpkg/: cli.py  database.py  main.py  mcp.py  migrations.py  models.py  queries.py  storage.py  validators.py
mcpkg/migrations/: 001_initial_schema.sql
mcpkg/tests/functional/: test_cli_project.py  test_cli_workspace.py
mcpkg/tests/integration/: test_database.py  test_migrations.py  test_queries.py
mcpkg/tests/unit/: test_models.py  test_storage.py  test_validators.py
search/: search_index.json
specs/001-local-prompts/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-local-prompts/checklists/: requirements.md
specs/001-local-prompts/contracts/: mcp-prompts.json  prompt-file-schema.yaml
specs/001-mcpkg-is-a/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-mcpkg-is-a/checklists/: requirements.md
specs/001-mcpkg-is-a/contracts/: cli-commands.md  mcp-api.md
specs/001-user-prompts-mcp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-user-prompts-mcp/checklists/: requirements.md
specs/001-user-prompts-mcp/contracts/: mcp-prompts-api.md
src/: cli.rs  data_dir.rs  lib.rs  library.rs  main.rs  mcp.rs  prompt.rs
src/prompts/: mod.rs  parser.rs  registry.rs  renderer.rs  types.rs  watcher.rs
tests/: integration_test.rs  test_error_handling.rs  test_get_prompt.rs  test_list_prompts.rs
tests/integration/: mod.rs  prompts_get.rs  prompts_list.rs  prompts_notify.rs
twig/: cli.py  main.py  mcp.py
website/: mkdocs.yml
website/docs/: CNAME  index.md
website/overrides/partials/integrations/analytics/: plausible.html
