[package]
name = "twig"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
rmcp = { version = "0.8.2", features = ["transport-io"] }
tokio = { version = "1.48.0", features = ["full"] }
gray_matter = "0.3.2"
minijinja = "2.12.0"
notify = "8.2.0"
notify-debouncer-full = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34+deprecated"
thiserror = "2.0.17"

[dev-dependencies]
tempfile = "3.23.0"
anyhow = "1.0.100"
