[package]
name = "twig"
version = "0.1.0"
edition = "2024"

[lib]
name = "twig"
path = "src/lib.rs"

[[bin]]
name = "twig"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
rmcp = { version = "0.8.2", features = ["transport-io", "client"] }
tokio = { version = "1.48.0", features = ["full"] }
minijinja = "2.5.0"
dirs = "5.0.1"
toml = "0.8.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
