[project]
name = "mcpkg"
version = "0.1.0"
description = "The model context package mangager"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.16.0",
    "platformdirs>=4.3.6",
    "supabase>=2.22.0",
    "typer>=0.19.2",
]

[project.scripts]
mcpkg = "mcpkg.main:run"

[tool.pyright]
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "pyright>=1.1.406",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.14.0",
]
