[project]
name = "twig"
version = "0.1.0"
description = "Help your coding agent twig"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.16.0",
    "supabase>=2.22.0",
    "typer>=0.19.2",
]

[project.scripts]
twig = "twig.main:run"

[tool.pyright]
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "mkdocs-material>=9.6.22",
    "pyright>=1.1.406",
    "pytest>=8.4.2",
    "ruff>=0.14.0",
]
